--- a/composer.json
+++ b/composer.json
@@ -1,40 +1,48 @@
 {
-  "name": "chillu/phpmd-silverstripe",
-  "description": "Extended mess detection rules from phpmd for SilverStripe applications.",
-  "keywords": [
-      "silverstripe",
-      "clean code",
-      "rules",
-      "mess detection",
-      "extends"
-  ],
-  "authors": [
-    {
-      "name": "Hamish Friedlander",
-      "email": "hamish@silverstripe.com"
+    "name": "csoellinger/silverstripe-phpmd",
+    "description": "Extended mess detection rules from phpmd for SilverStripe applications.",
+    "keywords": [
+        "silverstripe",
+        "clean code",
+        "rules",
+        "mess detection",
+        "extends"
+    ],
+    "authors": [
+        {
+            "name": "Christopher Söllinger",
+            "email": "christopher.soellinger@gmail.com"
+        },
+        {
+            "name": "Hamish Friedlander",
+            "email": "hamish@silverstripe.com"
+        },
+        {
+            "name": "Ingo Schommer",
+            "email": "ingo@silverstripe.com"
+        }
+    ],
+    "scripts": {
+        "test": "phpunit"
     },
-    {
-      "name": "Ingo Schommer",
-      "email": "ingo@silverstripe.com"
+    "license": "MIT",
+    "require": {
+        "php": "^7.4 || ^8.0",
+        "phpmd/phpmd": "@stable"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "symfony/process": "^5.4",
+        "mockery/mockery": "^1.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "CSoellinger\\SilverStripe\\PHPMD\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "CSoellinger\\SilverStripe\\PHPMD\\Tests\\": "tests/"
+        }
     }
-  ],
-  "license": "MIT",
-  "require": {
-    "phpmd/phpmd": "@stable"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "4.7.6",
-    "symfony/process": "~2.0",
-    "mockery/mockery": "0.9.4"
-  },
-  "autoload": {
-    "psr-4": {
-      "SilverStripe\\PHPMD\\Rule\\": "Rule/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "SilverStripe\\PHPMD\\": ""
-    }
-  }
 }
