--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
         "clean code",
         "rules",
         "mess detection",
+        "phpmd",
+        "code quality",
         "extends"
     ],
     "authors": [
@@ -32,8 +34,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "symfony/process": "^5.4",
-        "mockery/mockery": "^1.5"
+        "symfony/process": "^5.4"
     },
     "autoload": {
         "psr-4": {
