--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,17 @@
         }
     ],
     "scripts": {
-        "test": "phpunit"
+        "lint": [
+            "@lint-syntax"
+        ],
+        "lint-syntax": "parallel-lint --colors src tests/Functional tests/Unit tests/TestCase.php",
+        "test": [
+            "@lint",
+            "@test-unit"
+        ],
+        "test-unit": "phpunit --colors=always",
+        "test-coverage-ci": "phpunit --colors=always --coverage-text --coverage-clover build/coverage/clover.xml --coverage-cobertura build/coverage/cobertura.xml --coverage-crap4j build/coverage/crap4j.xml --coverage-xml build/coverage/coverage-xml --log-junit build/junit.xml",
+        "test-coverage-html": "phpunit --colors=always --coverage-html build/coverage/coverage-html"
     },
     "license": "MIT",
     "require": {
@@ -34,7 +44,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "symfony/process": "^5.4"
+        "symfony/process": "^5.4",
+        "php-parallel-lint/php-parallel-lint": "^1.3"
     },
     "autoload": {
         "psr-4": {
