--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "csoellinger/silverstripe-phpmd",
     "description": "Extended mess detection rules from phpmd for SilverStripe applications.",
+    "license": "MIT",
+    "type": "silverstripe-vendormodule",
     "keywords": [
         "silverstripe",
         "clean code",
@@ -10,6 +12,7 @@
         "code quality",
         "extends"
     ],
+    "readme": "README.md",
     "authors": [
         {
             "name": "Christopher Söllinger",
@@ -24,29 +27,30 @@
             "email": "ingo@silverstripe.com"
         }
     ],
-    "scripts": {
-        "lint": [
-            "@lint-syntax"
-        ],
-        "lint-syntax": "parallel-lint --colors src tests/Functional tests/Unit tests/TestCase.php",
-        "test": [
-            "@lint",
-            "@test-unit"
-        ],
-        "test-unit": "phpunit --colors=always",
-        "test-coverage-ci": "phpunit --colors=always --coverage-text --coverage-clover build/coverage/clover.xml --coverage-cobertura build/coverage/cobertura.xml --coverage-crap4j build/coverage/crap4j.xml --coverage-xml build/coverage/coverage-xml --log-junit build/junit.xml",
-        "test-coverage-html": "phpunit --colors=always --coverage-html build/coverage/coverage-html"
+    "homepage": "https://github.com/CSoellinger/silverstripe-phpmd",
+    "support": {
+        "issues": "https://github.com/CSoellinger/silverstripe-phpmd/issues"
     },
-    "license": "MIT",
     "require": {
-        "php": "^7.4 || ^8.0",
-        "phpmd/phpmd": "@stable"
+        "php": "^7.4 || ^8.0"
     },
     "require-dev": {
+        "ergebnis/composer-normalize": "^2",
+        "php-parallel-lint/php-parallel-lint": "@stable",
+        "phpmd/phpmd": "@stable",
+        "phpstan/extension-installer": "^1",
+        "phpstan/phpstan": "@stable",
+        "phpstan/phpstan-deprecation-rules": "^1",
+        "phpstan/phpstan-phpunit": "^1",
+        "phpstan/phpstan-strict-rules": "^1",
         "phpunit/phpunit": "^9.5",
+        "psalm/plugin-phpunit": "^0.17.0",
+        "squizlabs/php_codesniffer": "^3",
         "symfony/process": "^5.4",
-        "php-parallel-lint/php-parallel-lint": "^1.3"
+        "vimeo/psalm": "^4"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "CSoellinger\\SilverStripe\\PHPMD\\": "src/"
@@ -56,5 +60,42 @@
         "psr-4": {
             "CSoellinger\\SilverStripe\\PHPMD\\Tests\\": "tests/"
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true,
+            "phpstan/extension-installer": true
+        },
+        "platform-check": false,
+        "process-timeout": 3000,
+        "sort-packages": true
+    },
+    "scripts": {
+        "analyze": [
+            "@analyze:phpstan",
+            "@analyze:psalm"
+        ],
+        "analyze:phpstan": "phpstan",
+        "analyze:psalm": "psalm",
+        "clean": [
+            "@clean:build",
+            "@clean:cache"
+        ],
+        "clean:build": "git clean -fX build/**",
+        "clean:cache": "git clean -fX build/cache/**",
+        "lint": [
+            "@lint:style",
+            "@lint:syntax"
+        ],
+        "lint:fix": "phpcbf --colors",
+        "lint:style": "phpcs --colors --cache=build/cache/phpcs.cache",
+        "lint:syntax": "parallel-lint --colors src tests/Functional tests/Unit tests/TestCase.php",
+        "test": [
+            "@lint",
+            "@test:unit"
+        ],
+        "test:coverage-ci": "phpunit --colors=always --coverage-text --coverage-clover build/coverage/clover.xml --coverage-cobertura build/coverage/cobertura.xml --coverage-crap4j build/coverage/crap4j.xml --coverage-xml build/coverage/coverage-xml --log-junit build/junit.xml",
+        "test:coverage-html": "phpunit --colors=always --coverage-html build/coverage/coverage-html",
+        "test:unit": "phpunit --colors=always"
     }
 }
