Add composer replace value for old phpmd silverstripe project

--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,9 @@
         "symfony/process": "^5.4",
         "vimeo/psalm": "^4"
     },
+    "replace": {
+        "chillu/phpmd-silverstripe": "*"
+    },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "autoload": {
